# nepali-dictionary-api

./: .env.example  .gitignore  Dockerfile  Makefile  README  README.md  docker-compose.yaml  pyproject.toml
migrations/: __main__.py
nepali-dictionary/: main.py
nepali-dictionary/database/: data.csv
nepali_dictionary/: main.py
nepali_dictionary/common/db/: Dictionary.py  __init__.py
nepali_dictionary/core/search/: service.py  views.py
nepali_dictionary/mixins/: database.py
seed/: __main__.py  data.csv
